# twinning

./: .gitignore  AGENTS.md  BUILDS.md  CLAUDE.md  CODEX.md  Cargo.toml  GEMINI.md  README.md  operator.json
.beads/: issues.jsonl
.beads/.br_history/: issues.20260330_175551.jsonl  issues.20260330_175649.jsonl  issues.20260330_180124.jsonl  issues.20260330_180413.jsonl  issues.20260330_180745.jsonl  issues.20260330_182315.jsonl  issues.20260512_203851.jsonl  issues.20260517_003536.jsonl  issues.20260517_003542.jsonl  issues.20260517_033037.jsonl  issues.20260517_094038.jsonl  issues.20260517_095407.jsonl  issues.20260517_101359.jsonl  issues.20260517_101527.jsonl  issues.20260517_102934.jsonl  issues.20260517_104119.jsonl  issues.20260517_110107.jsonl  issues.20260517_111403.jsonl  issues.20260517_113612.jsonl  issues.20260517_114708.jsonl
.github/workflows/: ci.yml  release.yml
agent_ergonomics_audit/: README.md
agent_ergonomics_audit/audit/: HANDOFF.md  applied_changes.jsonl  manifest.json  recommendations.jsonl  scorecard.md
agent_ergonomics_audit/audit/regression_tests/: R-010__help_surface.md
canaries/: README.md  manifest.v0.json
crates/twinning-kernel/: Cargo.toml
crates/twinning-kernel/src/: config.rs  declaration.rs  engine.rs  ir.rs  lib.rs  refusal.rs  report.rs  result.rs  seed.rs
crates/twinning-kernel/src/backend/: base.rs  mod.rs
crates/twinning-kernel/src/kernel/: constraints.rs  mutation.rs  predicate.rs  read.rs  value.rs
crates/twinning-kernel/src/runtime/: mod.rs
crates/twinning-kernel/src/snapshot/: mod.rs  restore.rs
crates/twinning-postgres/: Cargo.toml
crates/twinning-postgres/src/: catalog.rs  extended_execute.rs  extended_parse.rs  frames.rs  lib.rs  listener.rs  mod.rs  simple_query.rs  writer_gate.rs
crates/twinning-rest/: Cargo.toml
crates/twinning-rest/src/: auth.rs  canary.rs  config.rs  encode.rs  lib.rs  listener.rs  mod.rs  normalize.rs  policy.rs  report.rs  request_validation.rs  routes.rs  seed.rs  session.rs  session_log.rs  spec.rs  topology.rs  xext.rs
crates/twinning-rest/src/mcp/: catalog.rs  dispatcher.rs  listener.rs  mod.rs  report.rs  stdio.rs  version.rs
crates/twinning-snowflake/: Cargo.toml
crates/twinning-snowflake/src/: arrow.rs  catalog.rs  config.rs  lib.rs  listener.rs  materialize.rs  query.rs  report.rs  rowtype.rs  session.rs  show.rs
docs/: OPENFIGI_SEARCH_SEMANTIC_TWIN_PACKET.md  OPENFIGI_V2_V3_REST_TWIN_PACKET.md  PARITY_LEDGER.md  PLAN_LINEAGE_SCENARIO_FACTORY.md  PLAN_OPEN_STANDARD_FIXED_INCOME.md  PLAN_TWINNING.md  PLAN_TWINNING_ALIEN_DIRECTIONS.md  PLAN_TWINNING_FUTURES.md  PLAN_TWINNING_REST_STRATEGY.md  REPLAY_PROOF_BACKEND_POLICY.md  SEED_JSONL.md  goal.md
docs/openfigi-search-semantic/: corpus.trimmed.jsonl  openfigi-search-semantic-twin.yaml  probe.py  probe2.py  probe3.py  replay_client.sh
rules/: snapshot-hash-stable.yml
schemas/: twinning.canary-manifest.v0.schema.json  twinning.port-proof.v0.schema.json  twinning.query-trace.v0.schema.json  twinning.rest-report.v0.schema.json  twinning.snapshot.v0.schema.json  twinning.twin-pair-orchestration-manifest.v0.schema.json  twinning.twin-pair-proof.v0.schema.json  twinning.twin-pair-replay-manifest.v0.schema.json  twinning.v0.schema.json
scripts/: check_protocol_import_boundaries.sh  ubs_gate.sh
src/: catalog.rs  cli.rs  config.rs  doctor.rs  ir.rs  lib.rs  main.rs  materialize.rs  migration_proof.rs  orchestration_manifest.rs  paths.rs  port.rs  query_trace.rs  refusal.rs  report.rs  runtime.rs  snapshot.rs  verify_bridge.rs
src/backend/: base.rs  overlay.rs
src/kernel/: coerce.rs  mod.rs  mutation.rs  predicate.rs  read.rs  storage.rs
src/protocol/: mod.rs
src/protocol/postgres/: catalog.rs  extended_execute.rs  extended_parse.rs  frames.rs  listener.rs  session.rs  simple_query.rs  startup.rs  writer_gate.rs
src/runtime/: final_artifacts.rs  run_child.rs  seed.rs
src/snapshot/: restore.rs
tests/: auth_compliance.rs  bootstrap_cli.rs  bootstrap_refusals.rs  bootstrap_snapshot_regression.rs  canary_manifest.rs  catalog_declaration.rs  compatibility_suite.rs  core_type_contract.rs  differential_suite.rs  doctor.rs  doctor_detectors.rs  help_surface.rs  interactive_server.rs  ir_equivalence_fixtures.rs  kernel_constraints.rs  kernel_insert.rs  kernel_predicate.rs  kernel_read.rs  kernel_update_delete.rs  kernel_upsert_omitted_columns.rs  live_materialization_cli.rs  live_verify_contract.rs  manifest_coverage_gate.rs  mcp_http.rs  migration_proof_cli.rs  orchestration_manifest.rs  pgwire_listener.rs  port.rs  protocol_extended_query.rs  protocol_metadata.rs  replay_backend_policy.rs  rest.rs  routing_coverage.rs  run_once_black_box.rs  run_once_transaction_abort.rs  run_once_verify.rs  storage_suite.rs  support.rs
tests/canaries/: README.md  assertions.rs  extractor_canary.rs  mcp_smoke.rs  metadata_join_conformance.rs  mod.rs  psql_smoke.rs  psycopg2_params.rs  runtime.rs  snowflake_smoke.rs  sqlalchemy_core.rs
tests/differential/: README.md  assertions.rs  migration_proof.rs  mod.rs  parity_ledger.rs  read_corpus.rs  runner.rs  write_corpus.rs
tests/fixtures/: README.md
tests/fixtures/bootstrap_cli/: schema.sql  verify.json
tests/fixtures/canaries/: README.md  (+1 more)
tests/rest/: chaos.rs  metadata_api_smoke.rs  openfigi_v2_v3.rs  request_validation.rs  response_stubs.rs  run_mode.rs
tests/storage/: budgets.rs  restore_reset.rs
(+64 files in other folders)
