[package]
name = "twinning"
version = "0.1.0"
edition = "2024"
authors = ["CMD+RVL <engineering@cmdrvl.com>"]
description = "In-memory database twin bootstrap: validate schema assets, emit deterministic reports, and prepare the Postgres-first twin runtime"
license = "MIT"
repository = "https://github.com/cmdrvl/twinning"
readme = "README.md"
keywords = ["database", "postgres", "schema", "twin", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "twinning"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlparser = "0.53"
thiserror = "2"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
