[package]
name = "twinning-rest"
version = "0.3.1"
edition = "2024"
authors = ["CMD+RVL <engineering@cmdrvl.com>"]
description = "OpenAPI REST protocol adapter for twinning"
license = "MIT"
repository = "https://github.com/cmdrvl/twinning"

[features]
mcp = []

[dependencies]
axum = "0.7"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
signal-hook = "0.3"
thiserror = "2"
tokio = { version = "1", features = ["rt", "net", "sync", "time"] }
twinning-kernel = { path = "../twinning-kernel" }
ureq = { version = "2", features = ["json"] }

[dev-dependencies]
tempfile = "3"
