[package]
name = "twinning-snowflake"
version = "0.4.0"
edition = "2024"
authors = ["CMD+RVL <engineering@cmdrvl.com>"]
description = "Snowflake HTTP wire protocol adapter for twinning"
license = "MIT"
repository = "https://github.com/cmdrvl/twinning"

[dependencies]
arrow-array = "58.3.0"
arrow-buffer = "58.3.0"
arrow-ipc = "58.3.0"
arrow-schema = "58.3.0"
axum = "0.7"
base64 = "0.22"
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
signal-hook = "0.3"
sqlparser = "0.53"
tokio = { version = "1", features = ["rt", "net", "sync", "time"] }
tower = "0.5"
twinning-kernel = { path = "../twinning-kernel" }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
ureq = { version = "2", features = ["json"] }
